--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -32,7 +32,7 @@
                 Ready to take the next step?
             </p>
             <div class="centered">
-                <a target="_blank" href="https://oh.grandview.systems/public_lodges/inquiry" class="usa-button usa-button--accent-warm centered">
+                <a routerLink="/contact-us" class="usa-button usa-button--accent-warm centered">
                     <span class="text-white">START YOUR JOURNEY</span>
                 </a>
             </div>
