--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -56,19 +56,6 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- <div class="usa-col">
-                                <ul class="usa-nav__submenu-list">
-                                    <li class="usa-nav__submenu-item">
-                                        <a href="#">Things 1</a>
-                                    </li>
-                                    <li class="usa-nav__submenu-item">
-                                        <a href="#">Things 2</a>
-                                    </li>
-                                    <li class="usa-nav__submenu-item">
-                                        <a href="#">Things 3</a>
-                                    </li>
-                                </ul>
-                            </div> -->
                         </div>
                     </div>
                 </li>
@@ -98,9 +85,6 @@
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="http://www.aasrcleveland.org" target="_blank" rel="noopener noreferrer">Ancient Accepted Scottish Rite, Valley of Cleveland</a>
-                                    </li>
-                                    <li class="usa-nav__submenu-item">
-                                        <a href="#">Another Link Again</a>
                                     </li>
                                 </ul>
                             </div>
@@ -134,7 +118,10 @@
                     </div>
                 </li>
                 <li class="usa-nav__primary-item">
-                    <a href="javascript:void(0)" class="usa-nav__link">Join Freemasonry</a>
+                    <a routerLink="/how-to-join" class="usa-nav__link">Join Freemasonry</a>
+                </li>
+                <li class="usa-nav__primary-item">
+                    <a routerLink="/future-events" class="usa-nav__link">Events</a>
                 </li>
                 <li class="usa-nav__primary-item">
                     <a routerLink="/contact-us" class="usa-nav__link">Contact Us</a>
