--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -36,7 +36,7 @@
                     aria-controls="rsvpModal"
                     (click)="setDateForRsvp(event.date)"
                     data-open-modal>Make your reservation today!</button>
-                <fcl-rsvp [rsvpDate]="rsvpDate"></fcl-rsvp>
+                <fcl-rsvp [rsvpDate]="event.date" [rsvpName]="event.name"></fcl-rsvp>
             </div>
           </div>
         </div>
