--- a/src/app/forest-city/future-events/rsvp/rsvp.component.html
+++ b/src/app/forest-city/future-events/rsvp/rsvp.component.html
@@ -7,7 +7,7 @@
             <h2 class="usa-modal__heading" id="rsvpHeading">Forest City Lodge #388 RSVP</h2>
             <div class="usa-prose">
                 <p id="rsvpDesc">RSVP for {{ rsvpDate | date:'fullDate' }}:</p>
-                <form [formGroup]="rsvpForm" class="usa-form">
+                <form [formGroup]="rsvpForm" (ngSubmit)="submitRsvp()" class="usa-form">
                     <label for="first-name" class="usa-label required-field">First Name:</label>
                     <input id="first-name"
                         type="text"
@@ -34,7 +34,7 @@
             <div class="usa-modal__footer">
                 <ul class="usa-button-group">
                     <li class="usa-button-group__item">
-                        <button type="button" class="usa-button usa-button--primary" (click)="submitRsvp()" [disabled]="!rsvpForm.valid">Submit</button>
+                        <button data-close-modal type="button" class="usa-button usa-button--primary" (click)="submitRsvp()" [disabled]="!rsvpForm.valid">Submit</button>
                     </li>
                     <li class="usa-button-group__item">
                         <button type="button" class="usa-button usa-button--secondary padding-105 text-center" data-close-modal>Cancel</button>
