--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column layout-wrapper">
     <header-component></header-component>
-    <div *ngIf="alert" [@slideInOut] class="usa-alert usa-alert--slim usa-alert--{{alert.className}} fcl-alert">
+    <div *ngIf="alert" [@fadeInOut] class="usa-alert usa-alert--slim usa-alert--{{alert.className}} fcl-alert">
         <div class="usa-alert__body">
           <p class="usa-alert__text">
             {{alert.text}}
