Added about us component, other cleanup

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -21,7 +21,6 @@
         <div class="usa-nav__inner">
             <button class="usa-nav__close">
                 Close
-                <!-- <img src="../../../assets/imported/uswds/img/close.svg" role="img" alt="Close"/> -->
             </button>
             <ul class="usa-nav__primary usa-accordion">
                 <li class="usa-nav__primary-item">
@@ -56,19 +55,19 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- <div class="usa-col">
+                            <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a href="#">Things 1</a>
+                                        <a routerLink="/about-us">About Us</a>
                                     </li>
-                                    <li class="usa-nav__submenu-item">
+                                    <!-- <li class="usa-nav__submenu-item">
                                         <a href="#">Things 2</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="#">Things 3</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </li>
@@ -99,9 +98,9 @@
                                     <li class="usa-nav__submenu-item">
                                         <a href="http://www.aasrcleveland.org" target="_blank" rel="noopener noreferrer">Ancient Accepted Scottish Rite, Valley of Cleveland</a>
                                     </li>
-                                    <li class="usa-nav__submenu-item">
+                                    <!-- <li class="usa-nav__submenu-item">
                                         <a href="#">Another Link Again</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="usa-col">
