--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -18,7 +18,7 @@
                 <p class="usa-prose">
                     As a fraternal organization, Freemasonry unites men of good character who, though of different religious, ethnic or social backgrounds, share a belief in the fatherhood of God and the brotherhood of mankind.
                 </p>
-                <h4><a target="_blank" href="https://www.freemason.com/this-is-ohio-freemasonry/" class="text-no-underline hover:text-underline">This Is Ohio Freemasonry</a></h4>
+                <h4><a routerLink="/about-us" class="text-no-underline hover:text-underline">This Is Forest City Lodge</a></h4>
             </div>
         </div>
     </div>
