--- a/src/app/forest-city/our-officers/our-officers.component.scss
+++ b/src/app/forest-city/our-officers/our-officers.component.scss
@@ -1,3 +1,13 @@
 .officer-jewel {
     max-height: 10rem;
+    max-width: 100%;
+}
+
+.officer-image {
+    width: 100%;
+    max-width: 10rem;
+}
+
+.fcl-card-container {
+    min-height: 10rem;
 }
