--- a/src/app/forest-city/our-officers/our-officers.component.html
+++ b/src/app/forest-city/our-officers/our-officers.component.html
@@ -17,7 +17,7 @@
                                 </header>
                                 <div class="usa-card__media">
                                     <div  class="usa-card__img">
-                                        <img  src="{{ officer.image }}">
+                                        <img class="officer-image" src="{{ officer.image }}">
                                     </div>
                                 </div>
                                 <div class="usa-card__body">
@@ -25,7 +25,7 @@
                                 </div>
                             </div>
                         </li>
-                        <div class="grid-col-2 officer-jewel-container">
+                        <div class="tablet:grid-col-2 officer-jewel-container">
                             <div class="centered">
                                 <img class="officer-jewel" src="{{ officer.jewel }}">
                             </div>
