added footer and recruitment components

--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -11,4 +11,5 @@
         <router-outlet></router-outlet>
     </div>
     <join-freemasonry></join-freemasonry>
+    <footer-component></footer-component>
 </div>
