updated footer to dynamically update copyright year

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="grid-col-auto">
                   <p>webmaster@forestcity388.com</p>
-                  <p>&copy;2021 Forest City Lodge. All Rights Reserved.</p>
+                  <p>&copy;{{ copyrightYear }} Forest City Lodge. All Rights Reserved.</p>
                 </div>
               </div>
             </address>
