--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -42,13 +42,10 @@
         <div class="centered margin-y-5 grid-container">
             <h3 class="mb-2">Petition Process</h3>
             <p>
-                If you are ready to start your journey as a Freemason, reach out to our <a routerLink="/contact-us">online form</a>.
+                If you are ready to start your journey as a Freemason, reach out through our <a routerLink="/contact-us">online form</a>.
             </p>
             <p>
-                Your inquiry will be referred to our secretary.
-            </p>
-            <p>
-                Please include Forest City Lodge in the box asking your reason for interest.
+                Your inquiry will be referred to our secretary. You will be contacted to schedule a time meet with the brothers of Forest City and learn more about our fraternity.
             </p>
             <p>
                 What happens next? Learn more about the next steps in becoming an Ohio Freemason.
