Added html template for use in emails going to user; updated subject lines, removed semi-colon from rsvp modal, another attempt at FOUC

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row fcl-home-welcome"><
+<div class="row fcl-home-welcome">
     <div class="fcl-age-banner bg-primary-vivid d-flex align-items-center justify-content-center">
         <div class="text-center text-white fcl-age-text">Celebrating {{ fclAge }} years of Masonic Pride</div>
     </div>
