--- a/src/app/core/email/enduser-contact-us-template.html
+++ b/src/app/core/email/enduser-contact-us-template.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="x-apple-disable-message-reformatting">
-  <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--<![endif]-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Thank you for your Correspondence</title>
 
     <style type="text/css">
