refactor of email api

--- a/src/app/core/email/fcl-rsvp-template.html
+++ b/src/app/core/email/fcl-rsvp-template.html
@@ -207,6 +207,18 @@ a[x-apple-data-detectors='true'] {
 												</tbody>
 											</table>
 
+                                            <table style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
+												<tbody>
+													<tr>
+														<td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 10px 20px;font-family:'Open Sans',sans-serif;" align="left">
+															<div style="color: #333333; line-height: 140%; text-align: left; word-wrap: break-word;">
+																<p style="font-size: 14px; line-height: 140%;"><strong>Email: </strong> <span style="font-size: 14px; line-height: 19.6px;">{{ email }}</span></p>
+															</div>
+														</td>
+													</tr>
+												</tbody>
+											</table>
+
 											<table style="font-family:'Open Sans',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" border="0">
 												<tbody>
 													<tr>
