--- a/src/app/forest-city/future-events/rsvp/rsvp.component.html
+++ b/src/app/forest-city/future-events/rsvp/rsvp.component.html
@@ -48,7 +48,13 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="usa-button usa-button--primary" (click)="submitRsvp()" [disabled]="!rsvpForm.valid" data-bs-dismiss="modal">Submit</button>
+                <button type="button" class="usa-button usa-button--primary" (click)="submitRsvp()" [disabled]="!rsvpForm.valid || disableButton" data-bs-dismiss="modal">
+                    <span *ngIf="!disableButton">Submit</span>
+                    <span *ngIf="disableButton">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Sending...
+                    </span>
+                </button>
                 <button type="button" class="usa-button usa-button--secondary" data-bs-dismiss="modal">Cancel</button>
             </div>
         </div>
