Finish initial lipstick
Change-Id: Ibc1c676d9a43ce024ae261240612af2f49305128

--- a/src/app/forest-city/bulletin/bulletin.component.html
+++ b/src/app/forest-city/bulletin/bulletin.component.html
@@ -1,5 +1,5 @@
 <div class="fcl-bulletin primary-content-container">
     <div class="primary-content">
-        <embed src="../../../assets/pdf/FCL-March2020Bulletin.pdf">
-    <div class="primary-content">
+        <embed [src]="bulletinSrc" type="application/pdf">
+    </div>
 </div>
