--- a/src/app/forest-city/recruiting/recruiting.component.html
+++ b/src/app/forest-city/recruiting/recruiting.component.html
@@ -1,8 +1,8 @@
 <div class="grid-container padding-y-4">
     <div class="row">
-        <div class="tablet:grid-col-6">
+        <div class="desktop:grid-col-6">
             <h2 class="text-center">Why Join?</h2>
-            <p class="usa-paragraph text-center">
+            <p class="usa-paragraph text-center measure-none mb-5">
                 By becoming an Ohio Freemason, you join a thriving fraternity committed to finding and uniting men eager to improve themselves by doing good in the world.
                 Men who strive to live each day by the values of honor, integrity, equality and brotherhood.
                 Men of respect, kindness and tolerance, fully accepting of our brothers’ religion, race, age, status or culture.
@@ -10,9 +10,9 @@
                 All this with men, once strangers, now brothers.
             </p>
         </div>
-        <div class="tablet:grid-col-6">
-            <iframe width="560"
-                height="315"
+        <div class="desktop:grid-col-6 recruitment-video-wrapper d-flex justify-content-center">
+            <iframe width="500"
+                height="282"
                 src="https://www.youtube.com/embed/9a2cTxyAaMc"
                 title="Even Better: More than a man. A Mason."
                 frameborder="0"
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="row padding-top-4">
-        <div class="tablet:grid-col-12">
+        <div class="desktop:grid-col-12">
             <h2 class="text-center">Your Journey as a Freemason</h2>
             <p class="usa-paragraph text-center measure-none">
                 When you become a Freemason, you commit to a lifelong obligation to uphold our timeless principles of brotherly love, relief and truth.
