--- a/src/app/forest-city/our-officers/our-officers.component.scss
+++ b/src/app/forest-city/our-officers/our-officers.component.scss
@@ -10,4 +10,16 @@
 
 .fcl-card-container {
     min-height: 10rem;
+    @media screen and (max-width: 639px) {
+        header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+
+.officer-jewel-container {
+    height: 100%;
 }
