--- a/src/app/forest-city/past-masters/past-masters.component.html
+++ b/src/app/forest-city/past-masters/past-masters.component.html
@@ -22,4 +22,4 @@
         </div>
     </div>
 </div>
-<jw-pagination [items]="pastMastersList.reverse()" (changePage)="onChangePage($event)"></jw-pagination>
+<jw-pagination [items]="pastMastersList" (changePage)="onChangePage($event)"></jw-pagination>
