--- a/src/app/forest-city/our-history/history.component.html
+++ b/src/app/forest-city/our-history/history.component.html
@@ -27,4 +27,5 @@
             </div>
         </div>
     </div>
+    <button id="returnToTop" class="usa-button usa-button--outline return-to-top-btn" (click)="goToTop()">Top</button>
 </div>
