fixes and improvements

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -13,7 +13,7 @@
             </a>
           </li>
           <li class="mobile-lg:grid-col-3 desktop:grid-col-auto usa-footer__primary-content">
-            <a class="usa-footer__primary-link" routerLink="/future-events">
+            <a class="usa-footer__primary-link" routerLink="/upcoming-events">
               Upcoming Events
             </a>
           </li>
