--- a/src/app/core/join/how-to-join/join.component.html
+++ b/src/app/core/join/how-to-join/join.component.html
@@ -1,5 +1,5 @@
 <div class="row usa-prose">
-    <div class="bg-primary-dark text-white col-md-6 col-xs-12 col-xs-12">
+    <div class="bg-primary-dark text-white col-md-6 col-xs-12">
         <div class="margin-y-5 grid-container ">
             <h3 class="centered mb-2">How to Join</h3>
             <p class="centered">
