--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -19,3 +19,28 @@ img {
         font-size: 20px;
     }
 }
+
+.usa-nav__submenu-list > li {
+    padding: 0px;
+}
+
+.usa-nav__submenu-list > li a
+{
+    margin: 0px;
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.usa-nav__submenu-list > .usa-nav__submenu-item:hover {
+    background-color: rgb(0, 52, 223);
+}
+
+@media screen and (min-width: 64em) {
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 999;
+    }
+}
