--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -1,8 +1,3 @@
-.main {
-    margin-left: 280px;
-    margin-right: 280px;
-}
-
 .layout-wrapper {
     overflow-x: hidden;
 }
@@ -11,4 +6,20 @@
     position: fixed;
     width: 100%;
     z-index: 1;
+}
+
+.dismiss-button {
+    text-decoration: none;
+
+    @media screen and (min-width: 480px) {
+        position: fixed;
+        top: 25px;
+        right: 15px;
+    }
+}
+
+@media screen and (min-width: 64em) {
+    .scroll-padding {
+        padding-top: 45px;
+    }
 }
