--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+$theme-image-path: '~uswds/src/img';
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import '~uswds/dist/css/uswds.min.css';/* You can add global styles to this file, and also import other style files */
+@import '~uswds/dist/css/uswds.min.css';
 
 .centered {
     text-align: center;
