updated history component to have a delayed Top button on mobile upon scrolling

--- a/src/app/forest-city/our-history/history.component.scss
+++ b/src/app/forest-city/our-history/history.component.scss
@@ -37,16 +37,18 @@ figure {
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
+    display: none; /* Hidden by default until scrolled */
+    position: fixed; /* Fixed/sticky position */
 
     @media screen and (min-width: 768px) {
-        display: none; /* Hidden by default until scrolled */
-        position: fixed; /* Fixed/sticky position */
         bottom: 20px; /* Place the button at the bottom of the page */
         right: 30px; /* Place the button 30px from the right */
     }
 
     @media screen and (max-width: 767px) {
         margin: 15px;
-        width: -webkit-fill-available;
+        width: 60px;
+        bottom: 0px;
+        right: 0px;
     }
 }
