--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -20,7 +20,7 @@
     <nav id="mainNavbar" aria-label="Primary Navigation" class="usa-nav bg-primary-light">
         <div class="usa-nav__inner">
             <button class="usa-nav__close">
-                <img src="close.svg" role="img" alt="Close">
+                <img src="../../../assets/images/close.svg" role="img" alt="Close">
             </button>
             <ul class="usa-nav__primary usa-accordion">
                 <li class="usa-nav__primary-item">
