--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -45,7 +45,7 @@
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a routerLink="/future-events">Our Calendar</a>
+                                        <a routerLink="/upcoming-events">Our Calendar</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
                                         <a routerLink="/bulletin">Our Current Bulletin</a>
